--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 # PostgreSQL. Versions 8.2 and up are supported.
 #
 # Install the pg driver:
+#
 #   gem install pg
 # On OS X with Homebrew:
 #   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
@@ -29,15 +30,15 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: codegeneration
+  username: codegeneration
 
   # The password associated with the postgres role (username).
-  #password:
+  password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
